--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,9 +1,8 @@
-.PHONY: help build test lint clean docker-build docker-push dev-deploy
+.PHONY: help build test lint clean run docker-build docker-push
 
 # Variables
 IMAGE_TAG ?= latest
 REGISTRY ?= kubeops
-SERVICES = api-gateway kube-manager ai-inspector devops-service logging-service monitoring-service
 
 help: ## Show this help message
 	@echo 'Usage: make [target]'
@@ -11,67 +10,36 @@ help: ## Show this help message
 	@echo 'Available targets:'
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {printf "  %-20s %s\n", $$1, $$2}' $(MAKEFILE_LIST)
 
-build: ## Build all backend services
-	@echo "Building all services..."
-	@for service in $(SERVICES); do \
-		echo "Building $$service..."; \
-		cd $$service && go build -o ../../bin/$$service ./cmd/server && cd ..; \
-	done
+build: ## Build the monolithic application
+	@echo "Building KubeOps..."
+	go build -o bin/kubeops ./cmd/server
 	@echo "Build complete!"
 
-build-%: ## Build specific service (e.g., make build-api-gateway)
-	@echo "Building $*..."
-	@cd $* && go build -o ../bin/$* ./cmd/server
-	@echo "Build complete!"
+run: ## Run the application locally
+	@echo "Starting KubeOps..."
+	go run ./cmd/server/main.go
 
 test: ## Run all tests
 	@echo "Running tests..."
 	go test -v ./...
 
-test-%: ## Run tests for specific service
-	@echo "Running tests for $*..."
-	cd $* && go test -v ./...
-
 lint: ## Run golangci-lint
 	@echo "Running linter..."
 	golangci-lint run
-
-lint-%: ## Run linter for specific service
-	@echo "Running linter for $*..."
-	golangci-lint run ./$*/...
 
 clean: ## Clean build artifacts
 	@echo "Cleaning..."
 	rm -rf bin/
 	@echo "Clean complete!"
 
-run-api-gateway: ## Run API Gateway locally
-	@echo "Starting API Gateway..."
-	cd api-gateway && go run cmd/server/main.go
-
-run-kube-manager: ## Run Kube Manager locally
-	@echo "Starting Kube Manager..."
-	cd kube-manager && go run cmd/server/main.go
-
-docker-build: ## Build all Docker images
-	@echo "Building Docker images..."
-	@for service in $(SERVICES); do \
-		echo "Building Docker image for $$service..."; \
-		docker build --build-arg SERVICE=$$service -t $(REGISTRY)/$$service:$(IMAGE_TAG) -f Dockerfile .; \
-	done
+docker-build: ## Build Docker image
+	@echo "Building Docker image..."
+	docker build -t $(REGISTRY)/kubeops:$(IMAGE_TAG) -f Dockerfile .
 	@echo "Docker build complete!"
 
-docker-build-%: ## Build specific Docker image
-	@echo "Building Docker image for $*..."
-	docker build --build-arg SERVICE=$* -t $(REGISTRY)/$*:$(IMAGE_TAG) -f Dockerfile .
-	@echo "Docker build complete!"
-
-docker-push: ## Push all Docker images
-	@echo "Pushing Docker images..."
-	@for service in $(SERVICES); do \
-		echo "Pushing $$service..."; \
-		docker push $(REGISTRY)/$$service:$(IMAGE_TAG); \
-	done
+docker-push: ## Push Docker image
+	@echo "Pushing Docker image..."
+	docker push $(REGISTRY)/kubeops:$(IMAGE_TAG)
 	@echo "Docker push complete!"
 
 mod-tidy: ## Tidy go modules
