--- a/deploy/helm/kubeops/values.yaml
+++ b/deploy/helm/kubeops/values.yaml
@@ -51,6 +51,13 @@ ingress:
           pathType: Prefix
   tls: []
 
+gateway:
+  enabled: false
+  type: apisix
+
+istio:
+  enabled: false
+
 # Resource limits
 resources:
   limits:
