--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "kubeops-frontend",
+  "name": "@yansongwel/kubeops-frontend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -14,32 +17,32 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "axios": "^1.6.2",
-    "element-plus": "^2.5.0",
+    "vue": "^3.5.0",
+    "vue-router": "^4.5.0",
+    "pinia": "^2.2.0",
+    "axios": "^1.7.0",
+    "element-plus": "^2.9.0",
     "@element-plus/icons-vue": "^2.3.1",
-    "echarts": "^5.4.3",
-    "vue-echarts": "^6.6.4",
-    "dayjs": "^1.11.10",
+    "echarts": "^5.6.0",
+    "vue-echarts": "^7.0.0",
+    "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "@vue/test-utils": "^2.4.3",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.27",
-    "vitest": "^1.1.0",
-    "@vitest/ui": "^1.1.0",
-    "@vitest/coverage-v8": "^1.1.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "prettier": "^3.1.1",
-    "@typescript-eslint/parser": "^6.15.0",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "unplugin-auto-import": "^0.17.2",
-    "unplugin-vue-components": "^0.26.0"
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vue/test-utils": "^2.4.6",
+    "typescript": "^5.7.0",
+    "vite": "^6.0.0",
+    "vue-tsc": "^2.2.0",
+    "vitest": "^3.0.0",
+    "@vitest/ui": "^3.0.0",
+    "@vitest/coverage-v8": "^3.0.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "prettier": "^3.4.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "unplugin-auto-import": "^0.18.0",
+    "unplugin-vue-components": "^0.27.0"
   }
 }
